# atomic-install

./: .gitignore  Makefile.am  configure.ac
doc/: Makefile.am  atomic-install-docs.sgml  atomic-install-sections.txt
lib/: copy.c  copy.h  io.c  io.h  journal.c  journal.h  merge.c  merge.h
src/: atomic-install.c  atomic-install.cxx  copy.c  copy.cxx  copy.h  copy.hxx  exceptions.cxx  exceptions.hxx  journal.c  journal.cxx  journal.h  merge.c  merge.cxx  merge.hxx
tests/copy/: cp.c
util/: ai-cp.c  ai-journal-create.c  ai-journal.c  atomic-install.c
